<?xml version="1.0"?>
<package format="2">
  <name>tuw_agv</name>
  <version>0.0.0</version>
  <description>The tuw_agv package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tuw_route</exec_depend>
  <exec_depend>tuw_route_msgs</exec_depend>
  <exec_depend>tuw_segments_to_path</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
